--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.35.3",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "react": "^18.3.1",
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
