--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "saasclone",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -10,7 +11,8 @@
     "type-check": "tsc --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:updateCountryGroups": "tsx ./src/tasks/updateCountryGroups.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
@@ -22,6 +24,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.11.1",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +35,7 @@
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "svix": "^1.37.0",
@@ -42,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.27.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
