--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "Preserve",
+    "module": "esnext",
     "moduleDetection": "force",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
