--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,18 @@ CLERK_WEBHOOK_SECRET=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_SIGN_IN_FORCe_REDIRECT_URL=/dashboard
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/dashboard
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/dashboard
 
 # Database
 DATABASE_URL=
+
+# Stripe
+STRIPE_BASIC_PLAN_PRICE_ID=
+STRIPE_STANDARD_PLAN_PRICE_ID=
+STRIPE_PREMIUM_PLAN_PRICE_ID=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 
 # Other
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
