--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
+    "@date-fns/tz": "^1.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -36,11 +37,12 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1",
+    "next": "^15.0.3",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "recharts": "^2.13.3",
     "stripe": "^17.3.1",
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.4",
